# lin-analyzer

./: CMakeLists.txt  README.md
src/: LINAnalyzer.cpp  LINAnalyzer.h  LINAnalyzerResults.cpp  LINAnalyzerResults.h  LINAnalyzerSettings.cpp  LINAnalyzerSettings.h  LINChecksum.cpp  LINChecksum.h  LINSimulationDataGenerator.cpp  LINSimulationDataGenerator.h
